--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/mssql": "^8.1.2",
     "@types/node": "^18.16.3",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "@faker-js/faker": "^8.4.1"
   },
   "dependencies": {
     "axios": "^1.4.0",
